Made some changes to the path these endpoints accept. Also had to fix some configuration issues in the app.ts so it fully works with nginx
